# adaptive-screen-meshing

./: .gitmodules  CMakeLists.txt  README.md  index.html
docker/: Dockerfile  build.sh  nvidia-container-runtime.sh  run.sh
src/: CMakeLists.txt  PhotometricRemeshing.h  main.cpp
src/rendering/: Renderer.h  TorchMesh.h  nvdiffrast.h
src/smp/: CMakeLists.txt
src/smp/algorithms/: Integration.h  ScreenDifferentialGeometry.h  ScreenMeshing.h  ScreenRemeshing.cpp  ScreenRemeshing.h
src/utility/: ArgumentParser.h
